--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,13 +1,13 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
+  name        : "Ali Behrouz"
+  uri         : "ALlBehrouz.github.io"
+  email       : "alibez@cs.ubc.ca"
+  bio         : "????????"
+  avatar      : "?"
   twitter     : "name"
-  google_plus : "Name"
+  google_plus : "https://scholar.google.com/citations?user=UbwVuqIAAAAJ&hl=en"
 
 Name2 Name2:
   name        : "Name2 Name2"
