--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: /teaching/    
     
   - title: "CV"
-    url: /cv/
+    url: https://drive.google.com/file/d/1wbIb6CJ8FbgxK4jW706eCDKXZl1CMyP6/view?usp=sharing
     
 #   - title: "Guide"
 #     url: /markdown/
