--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,8 +8,8 @@ main:
 
 #   - title: "Teaching"
 #     url: /teaching/    
-  - title: "Datasets"
-  - url: /datasets/
+#  - title: "Datasets"
+# - url: /datasets/
   
   - title: "CV"
     url: https://drive.google.com/file/d/15enlFs66eKlhDNSkdHLo31wF8Bx-qhDs/view?usp=sharing
