--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ author:
   instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "https://ir.linkedin.com/in/farnoosh-hashemi-a48328123"
+  linkedin         : "farnoosh-hashemi-a48328123/"
   orcid            : 
   pinterest        :
   soundcloud       :
