--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "ABehrouz"
+  github           : "Farnooshha"
   google_plus      :
   keybase          :
   instagram        :
