--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ analytics:
 
 # Site Author
 author:
-  name             : 
+  name             : "Farnoosh Hashemi"
   avatar           : "Img.jpeg"
   bio              : 
   location         : "Vancouver, BC, Canada"
