--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ main:
 # - url: /datasets/
   
   - title: "CV"
-    url: https://drive.google.com/file/d/15enlFs66eKlhDNSkdHLo31wF8Bx-qhDs/view?usp=sharing
+    url: "https://farnooshha.github.io/files/Farnoosh_CV (3).pdf"
     
 #   - title: "Guide"
 #     url: /markdown/
