--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ author:
   name             : "Farnoosh Hashemi"
   avatar           : "Img.jpeg"
   bio              : 
-  location         : "Vancouver, BC, Canada"
+  location         : "Ithaca, NY, US"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=vLhM3V0AAAAJ&hl=en"
