--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=vLhM3V0AAAAJ&hl=en"
-  email            : "farsh@cs.ubc.ca"
+  email            : "sh2574@cornell.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
